# task_nest_web_app

./: .gitignore  README.md  package-lock.json
.claude/agents/: auth-guardian.md  neon-db-ops.md
.specify/memory/: constitution.md
.specify/scripts/bash/: check-prerequisites.sh  create-new-feature.sh  setup-plan.sh
backend/: pyproject.toml  requirements.txt
backend/src/: __init__.py  database.py  main.py
backend/src/api/v1/endpoints/: auth.py  tasks.py
backend/src/middleware/: jwt_middleware.py
backend/src/models/: __init__.py  task.py  user.py
backend/src/services/: auth_service.py  task_service.py
backend/src/utils/: jwt.py  logging.py  security.py
backend/tests/: test_auth_middleware.py  test_jwt_validation.py  test_malformed_tokens.py  test_performance.py  test_quickstart_validation.py  test_task_integration.py  test_unauthorized_access.py  test_user_isolation.py
docs/: authentication.md  security.md
frontend/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: Footer.tsx  (+3 more)
specs/--number-1/: spec.md
specs/--number-2/: spec.md
specs/1-auth-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  spec.md.bak  tasks.md
specs/1-basic-todo-frontend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-task-features/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/2-jwt-auth-tasks/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+38 files in other folders)
